@@ -52,7 +52,7 @@ namespace Cinemachine.Editor
         private UnityEditor.Editor m_Editor = null;
         private UnityEditor.Editor m_Owner = null;
 
-        const int kIndentOffset = 6;
+        const int kIndentOffset = 3;
 
         /// <summary>
         /// Call this from OnInspectorGUI.  Will draw the asset reference field, and
@@ -63,8 +63,7 @@ namespace Cinemachine.Editor
             string showLabel, bool indent)
         {
             SerializedProperty property = m_Owner.serializedObject.FindProperty(m_PropertyName);
-            if (m_Editor == null)
-                UpdateEditor();
+            UpdateEditor(property);
             if (m_Editor == null)
                 AssetFieldWithCreateButton(property, title, defaultName, extension, message);
             else
@@ -77,7 +76,7 @@ namespace Cinemachine.Editor
                 if (EditorGUI.EndChangeCheck())
                 {
                     m_Owner.serializedObject.ApplyModifiedProperties();
-                    UpdateEditor();
+                    UpdateEditor(property);
                 }
                 if (m_Editor != null)
                 {
@@ -91,7 +90,9 @@ namespace Cinemachine.Editor
                     if (property.isExpanded)
                     {
                         EditorGUILayout.Separator();
-                        EditorGUILayout.HelpBox("This is a shared asset.  Changes made here will apply to all users of this asset.", MessageType.Info);
+                        EditorGUILayout.HelpBox(
+                            "This is a shared asset.  Changes made here will apply to all users of this asset.", 
+                            MessageType.Info);
                         EditorGUI.BeginChangeCheck();
                         if (indent)
                             ++EditorGUI.indentLevel;
@@ -104,12 +105,12 @@ namespace Cinemachine.Editor
                     GUI.enabled = true;
                     if(m_Editor.target != null)
                     {
-			if (!canEditAsset && GUILayout.Button("Check out"))
-			{
+			            if (!canEditAsset && GUILayout.Button("Check out"))
+			            {
                             Task task = Provider.Checkout(AssetDatabase.GetAssetPath(m_Editor.target), CheckoutMode.Asset);
-			    task.Wait();
-			}
-		    }
+			                task.Wait();
+			            }
+                    }
                 }
                 EditorGUILayout.EndVertical();
             }
@@ -141,7 +142,7 @@ namespace Cinemachine.Editor
             if (EditorGUI.EndChangeCheck())
             {
                 m_Owner.serializedObject.ApplyModifiedProperties();
-                UpdateEditor();
+                UpdateEditor(property);
             }
         }
 
@@ -154,13 +155,14 @@ namespace Cinemachine.Editor
             }
         }
 
-        public void UpdateEditor()
+        public void UpdateEditor(SerializedProperty property)
         {
-            DestroyEditor();
-            SerializedProperty property = m_Owner.serializedObject.FindProperty(m_PropertyName);
-            if (property.objectReferenceValue != null)
+            var target = property.objectReferenceValue;
+            if (m_Editor != null && m_Editor.target != target)
+                DestroyEditor();
+            if (target != null)
             {
-                m_Editor = UnityEditor.Editor.CreateEditor(property.objectReferenceValue);
+                m_Editor = UnityEditor.Editor.CreateEditor(target);
                 if (OnCreateEditor != null)
                     OnCreateEditor(m_Editor);
             }
